compiler/actonc/test/typeerrors/actor_self_reserved_constructor_param.act
actor Test(first, self):
    def test_method():
        pass